--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
-  --border-profilecolor:rgba(0, 0, 0, 0.5);
+  --border-profilecolor: rgba(0, 0, 0, 0.5);
   --switch-bg-url: url(./assets/solpreto2.svg);
 }
 body {
@@ -80,7 +80,7 @@ body * {
 }
 #switch button:hover {
   outline: 8px solid var(--highlight-color);
-  }
+}
 #switch span {
   display: block;
   width: 64px;
@@ -150,4 +150,13 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+/* media queries */
+@media (min-width: 700px;) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
