--- a/style.css
+++ b/style.css
@@ -71,10 +71,10 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
-  animation: slide-back 0.2s;
+  animation: slide-back 0.6s;
 }
 .light #switch button {
-  animation: slide-in 0.2s forwards;
+  animation: slide-in 0.6s forwards;
   right: 0;
   left: initial;
 }
@@ -158,5 +158,24 @@ footer {
   }
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
