--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ footer {
   font-size: 14px;
 }
 /* media queries */
-@media (min-width: 700px;) {
+@media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
